# canto-lang

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: cleanlab_extractor.canto  medical_triage_has.canto  shiny_items.canto  shiny_items.json  web_of_lies.canto
examples/concepts/food/: build.py  concepts.py  ontology.canto
examples/concepts/medical/: build.py  concepts.py  triage.canto
